<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:id="@id/currentData"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="10dp">
        <TableLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text="@string/characterName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/characterName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/realName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/realName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/team"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/firstAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/firstAppearance"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/createdBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/createdBy"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/publisher"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/bio"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>
